--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,7 +8,7 @@ body {
   font-weight: 800;
 }
 
-.small-para {
+.para {
   font-size: 14px;
   font-weight: 800;
 }
@@ -23,13 +23,13 @@ body {
   font-weight: bold;
 } 
 
-.button {
+ .cancel{
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
+.small-para, .text.child{
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
