--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,3 +1,24 @@
+/* - There is 8px between the edge of the card 
+and its content (the blue sections).-V
+
+- There is an 8px gap between each of the 
+blue sections inside the card.-V
+
+- The title of the card uses a 16px font.
+
+- There are 8px between the title text and 
+the edge of the title section.-V
+
+- The content section has 16px space on the
+ top and bottom, and 8px on either side.-V
+
+ - Everything inside the `.button-container` 
+section is centered, and there is 8px padding.-V
+
+- The Big Button is centered on its own line.
+
+- The Big Button has 24px space on the sides,
+ and 8px on top and bottom. */
 body {
   background: #eee;
   font-family: sans-serif;
@@ -7,21 +28,34 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px ;
 }
 
 .title {
   background: #e3f4ff;
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 16px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin-bottom: 8px;
+  padding: 16px 8px ;
+
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  margin: 0 auto;
+  display: block;
+  padding: 8px, 24px;
 }
